chore(kubernetes-server-mock): revert shared MockWebServer/Vertx infrastructure
CI wall-time measurements (4 samples on each side via gh run rerun
against the Java 21 job) showed a ~1% median delta — well inside the
per-run noise floor (main alone swung ~16% across the 4 samples). The
38% per-class win cited in the PR body applied only to small classes
where Vert.x cold-start dominates; at the job level the suite is
dominated by long-running classes where the amortized cold-start is a
small fraction.

The shared infrastructure — JVM-scoped Vertx + http/https MockWebServer
singletons, JVM shutdown hook, reflective (Vertx) constructor probe,
per-test dispatcher lifecycle — is not worth its maintenance overhead
plus the three documented breaking-change semantics (stable port across
tests, persistent listeners, shared underlying server for
@TestInstance(PER_CLASS) dual-field classes) for that gain.

Restores KubernetesMockServerExtension to baseline and drops the
matching CHANGELOG entries (sharing Improvement + Breaking changes
block). Keeps the two independently-valid changes:

- MockWebServer.dispatcher remains volatile (defense-in-depth for any
  future dispatcher-swap caller).
- MockWebServer.reset() Javadoc remains tightened.

The investigation and the iteration commits (8ae714a65a, 1428e3ea84)
are preserved in this PR's history.

Refs #7675

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>
Signed-off-by: Marc Nuri <marc@marcnuri.com>